compiler/testData/diagnostics/tests/SafeCallUnknownType.fir.kt
import <!UNRESOLVED_IMPORT!>com<!>.unknown

fun ff() {
    val a = <!UNRESOLVED_REFERENCE!>unknown<!>()
    val b = a?.plus(42)
}
